--- a/starter/package.json
+++ b/starter/package.json
@@ -38,6 +38,7 @@
 		"@floating-ui/dom": "^1.4.5",
 		"flowbite": "^1.7.0",
 		"flowbite-svelte": "^0.40.1",
+		"openai": "^3.3.0",
 		"tailwind-merge": "^1.14.0"
 	}
 }
